tests/rosetta/out/Smalltalk/canonicalize-cidr.out
/tmp/canonicalize-cidr.st:7: parse error, expected ']'
